tests/error/lessThanEqualsInteger-wrong-1st-argument-pair-integer--integer-.uplc
(program 1.0.0[[(builtin lessThanEqualsInteger)(con pair(integer)(integer) (90, 93))](con integer 10)])